--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,10 +58,11 @@
 
 
  .lblCartCount {
-   font-size: 12px;
-   background: #ff0000;
-   color: #fff;
-   padding: 0 5px;
+   font-size: 15px;
+   background: yellow;
+   color: black;
+   padding: 0px 5px 0px 5px;
+   border-radius: 20px;
    vertical-align: top;
  }
 
