--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,8 +61,7 @@
    font-size: 15px;
    background: yellow;
    color: black;
-   padding: 0px 5px 0px 5px;
-   border-radius: 20px;
+   padding: 0 4px;
    vertical-align: top;
  }
 
