--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,7 +66,14 @@
  }
 
  .movie-list {
-   color: black
+   color: black;
+ }
+
+
+ .movie-details {
+  color: black;
+  margin-top: 85px;
+  display: flexbox;
  }
 
  .lblCartCount {
@@ -77,9 +84,12 @@
    vertical-align: top;
  }
 
- .pagination nav ul {
-   margin: 30px;
-    
+ .pagination nav {
+   margin-left: auto;
+   margin-right: auto;
+   display: flex;
+   margin-bottom: 20px;
+   margin-top: 20px;
  }
 
  .align-cart {
@@ -118,6 +128,9 @@
 
  .page-pagination-inner {
    display: flexbox;
+ }
 
-
+ .highlight-hover:hover {
+  background-color: turquoise;
+  cursor: pointer;
  }
