--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,16 +63,20 @@
  .movie-container {
    padding: 35px;
    border-radius: 40px;
+
  }
+
+
 
  /* .movie-list {
    color: white;
  } */
 
 
- .movie-details {
+ .movie-details > {
   margin-top: 85px;
-  display: flexbox;
+  display: flex;
+
  }
 
  .lblCartCount {
