--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,8 @@
  }
 
  .movie-details-spacing {
-   padding: 30px;
+   padding: 30px; 
+   
  }
 
  .remove-btn {
@@ -73,7 +74,7 @@
  } */
 
 
- .movie-details> {
+ .movie-details {
    margin-top: 85px;
    display: flex;
 
