--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,10 +99,10 @@
    display: flex;
  }
 
- .movie-border {
-   margin: 30px;
+ .movie-border h5, td, th {
+   /* margin: 30px;
    margin-right: 50px;
-   padding: 10px;
+   padding: 10px; */
    color: white
  }
 
