movie list alignment

--- a/client/src/components/FourColGrid/FourColGrid.css
+++ b/client/src/components/FourColGrid/FourColGrid.css
@@ -1,4 +1,4 @@
-.rmdb-grid h1 {
+/* .rmdb-grid h1 {
      font-family: 'Abel', sans-serif;
      font-size: 42px;
 }
@@ -8,13 +8,6 @@
      grid-template-columns: auto auto auto auto;
 }
 
-.rmdb-grid-element {
-     margin: 0 40px 40px 0;
-     background: #353535;
-     max-height: 430px;
-     animation: animateGrid 0.5s;
-     overflow: hidden;
-}
 
 @keyframes animateGrid {
      from {
@@ -26,7 +19,7 @@
      }
 }
 
-/* For a 4-column grid */
+
 .rmdb-grid-element:nth-child(4n+4) {
      margin-right: 0;
 }
@@ -43,4 +36,4 @@
      .rmdb-grid h1 {
           font-size: 22px;
      }
-}
+} */
