Movie View alignment

--- a/client/src/components/Movies/MovieDetails.css
+++ b/client/src/components/Movies/MovieDetails.css
@@ -1,4 +1,4 @@
- .movie-details-container {
+ /* .movie-details-container {
 
      background-size: cover !important;
      background-position: center !important;
@@ -6,7 +6,7 @@
      height: 800px;
      padding: 40px 20px;
      box-sizing: border-box;
-}
+} */
 
 
 /* .rmdb-movieinfo-content {
