tvshow view updates

--- a/client/src/components/MovieThumb/MovieThumb.css
+++ b/client/src/components/MovieThumb/MovieThumb.css
@@ -6,11 +6,11 @@
      transition: all 0.3s;
      box-sizing: border-box;
 }
-
+/* 
 .clickable {
      cursor: pointer;
 }
 
 .clickable:hover {
      opacity: 0.8;
-}
+} */
