--- a/client/src/components/Movies/MovieThumb.css
+++ b/client/src/components/Movies/MovieThumb.css
@@ -1,5 +1,5 @@
-.rmdb-moviethumb img {
-  width: 500px;
+/* .rmdb-moviethumb img {
+  width: 50px;
   height: auto;
   max-width: 100%;
   max-height: 100%;
@@ -13,4 +13,4 @@
 
 .clickable:hover {
   opacity: 0.8;
-}
+} */
