--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,21 @@
  html {
    background-color: rgb(9, 28, 37);
+   background-size: cover;
  }
 
  .app-main {
    background-color: rgb(9, 28, 37);
    color: white;
+ } 
 
- }
+ /* .landing-page, img {
+   background-size: cover;
+    width: 100%;
+    height: 100%;
 
- .landing-page {
-   width: auto;
-   max-width: 100%;
-   height: auto;
 
- }
+
+ } */
 
  .movie-details-spacing {
    padding: 30px;
@@ -143,4 +145,4 @@
 
 
 
- @media (min-width: 576px) {} 
+ @media (min-width: 576px) {}
