--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,14 +12,11 @@
    color: white;
  } 
 
- /* .landing-page, img {
+/* .landing-page {
    background-size: cover;
     width: 100%;
     height: 100%;
-
-
-
- } */
+ }  */
 
  .movie-details-spacing {
    padding: 30px;
